fixing img upload
