# src/REST-entities/call/call.router.ts
@@ -88,6 +88,7 @@ const editCallSchema = Joi.object({
     }
     return value;
   }),
+  imageUrls: Joi.array().items(Joi.string())
 });
 
 const getCallsSchema = Joi.object({
